# first_risk_layer

./: .gitignore  LICENSE  README.md  RPN0-2-20260414.md  Readme stage2.md  临时要查询学习的.md
src/agent_description/: CMakeLists.txt  package.xml
src/agent_description/config/: agent_ros2_controller.yaml
src/agent_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/agent_description/urdf/: agent.ros2_control.xacro  agent.urdf.xacro  base_agent.urdf.xacro
src/agent_description/world/: custom_room.world
src/agent_dynamic_scene/: INTERFACE_2_2.md  package.xml  setup.cfg  setup.py
src/agent_dynamic_scene/agent_dynamic_scene/: dynamic_actor_manager copy.py  dynamic_actor_manager.py
src/agent_dynamic_scene/config/: scenario_blind_corner.yaml  scenario_corridor_cross.yaml
src/agent_dynamic_scene/launch/: dynamic_scene.launch.py
src/agent_dynamic_scene/models/dynamic_cylinder/: model.config  model.sdf
src/agent_navigation2/: CMakeLists.txt  package.xml
src/agent_navigation2/config/: nav2_params.yaml  nav2_params_clean.yaml  nav2_params_risk.yaml  nav2_params_risk_clean.yaml
src/agent_navigation2/launch/: navigation2.launch.py  navigation2_clean.launch.py  navigation2_risk.launch.py  navigation2_risk_clean.launch.py
src/agent_patrol/: package.xml  setup.cfg  setup.py
src/agent_patrol/agent_patrol/: fixed_trial_node.py  (+1 more)
src/nav2_current_actor_layer/: CMakeLists.txt  package.xml  plugins.xml
src/nav2_future_keepout_layer/: CMakeLists.txt  package.xml  plugins.xml
src/nav2_risk_layer/: CMakeLists.txt  package.xml  plugins.xml
(+15 files in other folders)
